@@ -15,6 +15,7 @@ echo ** Generating OwlPlug MSI Install package **
 
 jpackage --type msi --input ./input/ --name OwlPlug --main-class org.springframework.boot.loader.JarLauncher ^
 --main-jar owlplug.jar --license-file .\input\LICENSE --dest ./output ^
+--java-options "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED" ^
 --app-version %owlplug-version% --icon .\resources\owlplug.ico --vendor OwlPlug ^
 --win-dir-chooser --win-menu --win-shortcut
 
